--- a/[모의]2115_벌꿀채취.md
+++ b/[모의]2115_벌꿀채취.md
@@ -1,6 +1,95 @@
-
-
 ```c++
+#include <stdio.h>
+#include <vector>
+#include <string.h>
+using namespace std;
+int T;
+int N, M, MAX;
+int input[14][14] = { 0, };
+int result = 0;
+typedef struct ctr
+{
+	int y, x;
+}ctr;
+vector <ctr>v;
+void reset()
+{
+	memset(input, 0, sizeof(input));
+	result = 0;
+}
+bool safe(int x) //구간에 대해 안전한지 검사 
+{
+	if (x <= N)return 1;
+	return 0;
+}
+int ans1;
+
+void sol(int y, int x, int C, int profit, int x_max) // C는 최대 벌꿀양 채취, profit은 이익
+{
+	if (MAX < C)return;
+	if (x > x_max)
+	{
+		ans1 = ans1 < profit ? profit : ans1;
+		return;
+	}
+	//이꿀통을 뽑는다. 안뽑는다
+	sol(y, x + 1, C + input[y][x], profit + input[y][x] * input[y][x], x_max);
+	sol(y, x + 1, C , profit , x_max);
+
+}
+void dfs(int y, int x, int cnt)
+{
+	if (cnt == 2)
+	{
+		//두 구간을 뽑았다.
+		//구간의 범위가 안전하고, 두 구간이 겹치지 않는 지 검사.
+		int y1 = v[0].y, x1 = v[0].x, y2 = v[1].y, x2 = v[1].x;
+		if (y1 == y2 && x1 <= x2 && x2 <= x1 + M - 1)return; //범위가 겹치면 return ;
+
+		int x1_max = x1 + M - 1;
+		int x2_max = x2+M - 1;
+		if (safe(x1_max) && safe(x2_max)) //구간이 모두 안전하다면  
+		{
+			//가장 최대 수익을 내본다.
+			int sum = 0;
+			ans1 = 0;
+			sol(y1,x1, 0, 0, x1_max);
+			sum += ans1;
+			ans1 = 0;
+			sol(y2, x2, 0, 0, x2_max);
+			sum += ans1;
+			result = result < sum ? sum : result;
+		}
+		return;
+	}
+
+	for (int i = y; i <= N; i++)
+	{
+		for (int j = x; j <= N; j++)
+		{
+			v.push_back({ i, j }); //뽑은 좌표를 v에 담아줌
+			dfs(i, j + 1, cnt + 1);
+			v.pop_back();
+		}x = 1;
+	}
+
+}
+int main(void)
+{
+	scanf("%d", &T);
+	for (int t = 1; t <= T; t++)
+	{
+		scanf("%d %d %d", &N, &M, &MAX);
+
+		for (int i = 1; i <= N; i++)for (int j = 1; j <= N; j++)scanf("%d", &input[i][j]);
+
+		
+		dfs(1, 1,0);
+
+		printf("#%d %d\n", t, result);
+		reset();
+	}
+}
 
 ```
 
