--- a/[모의]1953.탈주범검거.md
+++ b/[모의]1953.탈주범검거.md
@@ -1,4 +1,99 @@
 ```c++
+#include <stdio.h>
+#include <string.h>
+#include <queue>
+using namespace std;
+int T, N, M, sy, sx, time;
+int input[54][54];
+bool v[54][54];
+bool pan[8][8][5];
+int dy[] = { 0,-1, 0, 1, 0 };
+int dx[] = { 0, 0, 1, 0, -1 };
+typedef struct ctr
+{
+	int y, x, cnt;
+}ctr;
+queue <ctr>q;
+void reset()
+{
+	memset(input, 0, sizeof(input));
+	memset(v, 0, sizeof(v));
+	while (q.size() != 0)q.pop();
+}
+
+void init()
+{
+	pan[1][1][1] = 1, pan[1][1][2] = 1, pan[1][1][3] = 1, pan[1][1][4] = 1;
+	pan[1][2][1] = 1, pan[1][2][3] = 1, pan[1][3][2] = 1, pan[1][3][4] = 1, pan[1][4][3] = 1, pan[1][4][4] = 1;
+	pan[1][5][1] = 1, pan[1][5][4] = 1, pan[1][6][1] = 1, pan[1][6][2] = 1, pan[1][7][2] = 1, pan[1][7][3] = 1;
+
+	pan[2][1][1] = 1, pan[2][1][3] = 1, pan[2][4][3] = 1, pan[2][5][1] = 1, pan[2][6][1] = 1, pan[2][7][3] = 1;
+	pan[2][2][1] = 1, pan[2][2][3] = 1;
+
+	pan[3][3][2] = 1, pan[3][3][4] = 1, pan[3][4][4] = 1, pan[3][7][2] = 1, pan[3][5][4] = 1, pan[3][6][2] = 1, pan[3][1][2] = 1, pan[3][1][4] = 1;
+
+	pan[4][7][2] = 1, pan[4][5][1] = 1, pan[4][6][1] = 1, pan[4][6][2] = 1, pan[4][1][1] = 1, pan[4][1][2] = 1, pan[4][2][1] = 1, pan[4][3][2] = 1;
+
+	pan[5][7][2] = 1, pan[5][7][3] = 1, pan[5][6][2] = 1, pan[5][4][3] = 1, pan[5][1][2] = 1, pan[5][1][3] = 1, pan[5][2][3] = 1, pan[5][3][2] = 1;
+
+	pan[6][7][3] = 1, pan[6][4][4] = 1, pan[6][4][3] = 1, pan[6][5][4] = 1, pan[6][1][3] = 1, pan[6][1][4] = 1, pan[6][2][3] = 1, pan[6][3][4] = 1;
+
+	pan[7][4][4] = 1, pan[7][5][1] = 1, pan[7][5][4] = 1, pan[7][6][1] = 1, pan[7][1][1] = 1, pan[7][1][4] = 1, pan[7][2][1] = 1, pan[7][3][4] = 1;
+
+}
+bool safe(int y, int x)
+{
+	if (0 <= y && y < N && 0 <= x && x < M)return 1;
+	return 0;
+}
+
+int main(void)
+{
+	init();
+	scanf("%d", &T);
+	for (int t = 1; t <= T; t++)
+	{
+		int ans = 1;
+		scanf("%d %d %d %d %d", &N, &M, &sy, &sx, &time);
+
+		for (int i = 0; i < N; i++)for (int j = 0; j < M; j++)scanf("%d", &input[i][j]);
+
+
+		v[sy][sx] =1;
+		q.push({ sy, sx, 0 });
+
+		while (q.size() != 0)
+		{
+			ctr c = q.front();
+			q.pop();
+
+			if (time == c.cnt)break;
+
+			int now = input[c.y][c.x];
+			for (int i = 1; i <= 4; i++)
+			{
+				int ty = c.y + dy[i];
+				int tx = c.x + dx[i];
+				int tnt = c.cnt + 1;
+				int there = input[ty][tx];
+				if (safe(ty, tx) && v[ty][tx] == 0)
+				{
+					if (pan[now][there][i] == 1)
+					{
+						v[ty][tx] = 1;
+						if (tnt != time)ans++;
+						q.push({ ty, tx, tnt });
+					}
+				}
+			}
+
+
+		}
+
+		printf("#%d %d\n", t, ans);
+		reset();
+	}
+}
 
 ```
 
